@@ -1,3 +1,9 @@
+2003-08-24  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* src/FamilyView.py (edit_active_person, build_ap_menu,
+	build_child_menu, build_spouse_menu, build_parents_menu,
+	build_sp_parents_menu, edit_parents, edit_sp_parents): 
+	Add navigation portion to all context menus. 
+
 2003-08-23  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/BaseDoc.py: New base clase for TextDoc/DrawDoc combination
 	* src/docgen/OpenOffice.py: Derive from BaseDoc instead of TextDoc
